--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node -r dotenv/config.js --watch server.js",
+    "dev": "nodemon -r dotenv/config.js server.js",
     "start": "node server.js"
   },
   "keywords": [],
