--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -r dotenv/config.js server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha -r dotenv/config.js --timeout 60000 --recursive" 
   },
   "keywords": [],
   "author": "Mike Barlozewski",
@@ -22,6 +23,10 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "chai": "*",
+    "dotenv": "^16.0.3",
+    "mocha": "*",
+    "mongodb-memory-server": "^8.11.4",
+    "supertest": "^6.3.3"
   }
 }
