Installed cross-env, included it in scripts and changed db connection

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config.js server.js",
-    "start": "node server.js",
-    "test": "mocha -r dotenv/config.js --timeout 60000 --recursive" 
+    "dev": "cross-env NODE_ENV=development nodemon -r dotenv/config.js server.js",
+    "start": "cross-env NODE_ENV=development node server.js",
+    "test": "cross-env NODE_ENV=test mocha -r dotenv/config.js --timeout 60000 --recursive"
   },
   "keywords": [],
   "author": "Mike Barlozewski",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "*",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "mocha": "*",
     "mongodb-memory-server": "^8.11.4",
