--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon -r dotenv/config.js server.js",
     "start": "cross-env NODE_ENV=development node server.js",
-    "test": "cross-env NODE_ENV=test mocha -r dotenv/config.js --timeout 60000 --recursive --exit"
+    "test": "cross-env NODE_ENV=test mocha -r dotenv/config.js --timeout 60000 --recursive --exit",
+    "coverage": "cross-env NODE_ENV=test c8 --reporter=text mocha -r dotenv/config.js --timeout 60000 --recursive --exit"
+  },
+  "c8": {
+    "all": true,
+    "branches": 100,
+    "exclude": [
+      "test/**",
+      "node_modules/**"
+    ],
+    "instrument": {
+      "include": [
+        "src/**/*.js"
+      ]
+    }
   },
   "keywords": [],
   "author": "Mike Barlozewski",
@@ -15,15 +29,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
-    "nodemon": "^2.0.20",
-    "cross-env": "^7.0.3"
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "c8": "^7.13.0",
     "chai": "*",
     "dotenv": "^16.0.3",
     "mocha": "*",
